syntax = "proto3";

package hello;

option go_package = "github.com/hello-grpc/hello";

service Greeter {
    // Sends a greeting
    rpc SayHello(SayHelloRequest) returns (SayHelloReply) {}
}

message SayHelloRequest {
    string name = 1;
}

message SayHelloReply {
    string message = 1;
}